// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scenes/HomeControl/Lights/Switch Should render correctly (off) 1`] = `
<Flex(column)
  align="center"
  justify="flex-start"
>
  <StatusIcon
    isOn={false}
    onClick={[Function]}
  />
  <div
    flex={true}
  >
    <Editable
      onChange={[Function]}
    >
      Light #3
    </Editable>
  </div>
</Flex(column)>
`;

exports[`scenes/HomeControl/Lights/Switch Should render correctly (on) 1`] = `
<Flex(column)
  align="center"
  justify="flex-start"
>
  <StatusIcon
    isOn={true}
    onClick={[Function]}
  />
  <div
    flex={true}
  >
    <Editable
      onChange={[Function]}
    >
      Light #3
    </Editable>
  </div>
</Flex(column)>
`;
